--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -162,6 +162,9 @@ Style/SingleLineBlockParams:
 Style/SimbolArray:
   Enabled: false
 
+Style/EmptyMethod:
+  EnforcedStyle: expanded
+
 # * migrate
 # * jbuilder
 # * model の association
