--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,17 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  encording: utf8
+  database: rails_tutorial
+  pool: 5
+  username: sample
+  password: sample_password
+  host: localhost
+
+
+#  <<: *default
+#  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
