--- a/config/database.yml
+++ b/config/database.yml
@@ -5,18 +5,21 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  database: insta_database
+  username: insta_user
+  password: insta_password
+  socket: /var/lib/mysql/mysql.sock
 
 development:
   adapter: mysql2
   encording: utf8
-  database: rails_tutorial
   pool: 5
   username: sample
   password: sample_password
-  host: localhost
+  socket: /tmp/mysql.sock
 
 
 #  <<: *default
@@ -26,9 +29,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: sqlite3
+  encording: utf8
+  pool: 5
+  username: sample
+  password: sample_password
   database: db/test.sqlite3
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
