--- a/config/database.yml
+++ b/config/database.yml
@@ -9,16 +9,16 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: insta_database
-  username: insta_user
-  password: insta_password
+  username: <%= ENV["USER_NAME"] %>
+  password: <%= ENV["USER_PASSWORD"] %>
   socket: /var/lib/mysql/mysql.sock
 
 development:
   adapter: mysql2
   encording: utf8
   pool: 5
-  username: sample
-  password: sample_password
+  username: <%= ENV["DEV_USER_NAME"] %>
+  password: <%= ENV["DEV_USER_PASSWORD"] %>
   socket: /tmp/mysql.sock
 
 
@@ -32,8 +32,8 @@ test:
   adapter: sqlite3
   encording: utf8
   pool: 5
-  username: sample
-  password: sample_password
+  username: <%= ENV["DEV_USER_NAME"] %>
+  password: <%= ENV["DEV_USER_PASSWORD"] %>
   database: db/test.sqlite3
 
 
